remove useless files

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 
 /src/__pychache__
 
-/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.aux
-/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.log
-/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tcp
-/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tex
-/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tiw
-/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tps
+"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.aux"
+"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.log"
+"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tcp"
+"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tex"
+"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tiw"
+"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tps"
 
