--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 .vscode
-/doc/sphinx/*
-!/doc/sphinx/build/html
 
-/src/__pychache__
+doc/sphinx/*
+!doc/sphinx/build/
+doc/sphinx/build/*
+!doc/sphinx/build/html/
 
-"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.aux"
-"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.log"
-"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tcp"
-"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tex"
-"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tiw"
-"/doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tps"
+src/__pychache__
+
+"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.aux"
+"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.log"
+"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tcp"
+"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tex"
+"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tiw"
+"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tps"
 
