--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,9 @@ doc/sphinx/build/*
 
 src/__pychache__
 
-"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.aux"
-"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.log"
-"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tcp"
-"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tex"
-"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tiw"
-"doc/theory/Neural network mathematical theory (Fr)/Th\303\251orie backpropagation.tps"
+doc/theory/*.aux
+doc/theory/*.log
+doc/theory/*.tcp
+doc/theory/*.tiw
+doc/theory/*.tps
 
